[tool.poetry]
name = "prezente-uvt-server"
package-mode = false
version = "0.1.0"
description = "Server pentru aplicatia de prezente."
authors = ["domnu-raul <sir.c4ppuccin0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
SQLAlchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.30.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
